--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <title>Contact | D2N</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="utf-8">
+<title>문의하기 | D2N 연락처·주소·상담 — 디투엔</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Meta -->
+<meta name="keywords" content="디투엔, D2N, 문의하기, 연락처, 주소, 전화번호, 이메일, 상담, 대구, 공간정보, GIS, LiDAR, 드론">
+<meta name="description" content="D2N 문의하기 — d2n@d2n.kr · 053-522-0320 · 이메일, 전화, 방문 상담 및 지도 위치를 확인하세요.">
+<link rel="canonical" href="https://www.d2n.co.kr/contact.html">
 
   <!-- Favicons -->
   <link rel="icon" href="img/favicon.png" />
@@ -229,7 +234,7 @@
             </div>
             <div class="meta">
               <div class="label">Address</div>
-              <div class="value">대구광역시 동구 동북로75길 13  상가 401호 <br> ㉾ 41181</div>
+              <div class="value">대구광역시 동구 동북로75길 13  상가 401호  ✉ ㉾ 41181</div>
             </div>
           </div>
 
