--- a/equipment.html
+++ b/equipment.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8">
-  <title>Web Equipment Operations | D2N</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<title>라이다·드론 장비 소개 | Handheld·UAV LiDAR 스펙 & 운영 — D2N</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Meta -->
+<meta name="keywords" content="디투엔, D2N, 장비, 라이다, LiDAR, 드론, UAV, 핸드헬드 라이다, 장비 스펙, 장비 운영, 공간정보, GIS">
+<meta name="description" content="Handheld·UAV LiDAR 장비 라인업과 주요 스펙, 운영 사례를 제공합니다. 하드웨어 비교표, 장비 성능, 활용 사례를 통해 프로젝트에 적합한 드론/라이다 장비를 확인하세요.">
+<link rel="canonical" href="https://www.d2n.co.kr/equipment.html">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
@@ -184,73 +189,93 @@
 }
 
 
+/* ===== 모바일(≤576px)에서 스펙 테이블 가로 스크롤 완전 제거 ===== */
+@media (max-width:576px){
+  /* 1) 상위의 overflow-x:auto, min-width:1100px 무력화 */
+  .table-wrap{
+    overflow-x: hidden !important;     /* ← 가로 스크롤 제거 */
+    -webkit-overflow-scrolling: auto !important;
+  }
+  .table-hw{
+    min-width: 0 !important;           /* ← 고정폭 해제 */
+    width: 100% !important;
+    table-layout: auto !important;
+  }
 
+  /* 2) 혹시 자식이 폭을 밀어내지 않도록 안전장치 */
+  .table-hw tr,
+  .table-hw td{
+    max-width: 100% !important;
+    box-sizing: border-box;
+  }
 
-
-/* ===== 3) Handheld 상세 (Bootstrap 그리드 유지 + 내부만 정렬) ===== */
-.handheld .card{
-  background:#fff;
-  border:1px solid var(--line);
-  border-radius:16px;
-  overflow:hidden;
-  box-shadow:var(--shadow);
-
-  /* 내부요소(이미지영역 + 본문영역) 세로배치 */
-  display:flex;
-  flex-direction:column;
-  height:100%;                 /* ✅ 컬럼 높이에 카드가 꽉 차도록 */
-}
-
-/* 이미지 영역: 카드 안에서 남는 공간을 차지하고 중앙 정렬 */
-.handheld .pic{
-  flex:1 1 auto;               /* ✅ 본문 길이에 따라 자동으로 늘어남 */
-  display:flex;
-  align-items:center;          /* 상하 중앙 */
-  justify-content:center;      /* 좌우 중앙 */
-  padding:12px;
-}
-
-/* 이미지: 비율 유지 + 과대확대 방지 */
-.handheld .pic img{
-  display:block;
-  max-width:100%;
-  height:auto;
-  object-fit:contain;          /* 잘리지 않게 */
-}
-
-/* 데스크탑에서 카드 높이에 맞춰 보기 좋게 */
-@media (min-width: 992px){
-  .handheld .row.align-items-stretch{ align-items:stretch; } /* ✅ 컬럼 높이 동일화 */
-  .handheld .pic img{
-    max-height: 500px;         /* 필요하면 440~560px로 미세조정 */
+  /* 3) 긴 텍스트도 줄바꿈 허용 (이미 있으나 안전하게 한 번 더) */
+  .table-hw td{
+    white-space: normal !important;
+    word-break: break-word;
   }
 }
 
-/* 태블릿/모바일: 자동 축소 */
-@media (max-width:1199.98px){
-  .handheld .pic img{ max-height: 360px; }
+
+
+
+
+
+
+
+
+
+/* =========================
+   Handheld 장비 카드 (리스트/카드/내부 레이아웃)
+   ========================= */
+
+/* 리스트: 카드 간 간격 */
+.handheld-list{
+  row-gap: 28px;                 /* 최신 브라우저 간격 */
 }
-@media (max-width:767.98px){
-  .handheld .pic img{ max-height: 260px; }
+.handheld-list > [class*="col-"]{
+  margin-bottom: 28px;           /* 예비(구형 브라우저) */
 }
 
-/* 본문 영역 (가독성 유지) */
-.handheld .body{
-  padding:22px 22px;
+/* 카드 래퍼 */
+.handheld-list .col-lg-6{
+  display: flex;                  /* 동일 높이 */
+}
+.hh-card{
+  background:#fff;
+  border:1px solid var(--line);
+  border-radius:16px;
+  box-shadow:var(--shadow);
+  overflow:hidden;
+  display:flex;
+  flex-direction:column;          /* 모바일/태블릿 기본 세로 */
+  width:100%;
+}
+
+/* 이미지 영역 */
+.hh-media{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:18px;
+  background:#fff;
+}
+.hh-media img{
+  display:block;
+  max-width:100%;
+  height:auto;
+  object-fit:contain;
+}
+
+/* 본문 */
+.hh-body{
+  padding:24px 26px;
   line-height:1.85;
   color:#223745;
 }
 
-
-.handheld h3 {
-  font-weight:900;
-  color:#1D4E89;
-  margin:6px 0 25px;   /* ✅ 아래쪽 여백 12px → 20px 정도로 늘림 */
-  font-size:clamp(20px,2.4vw,28px);
-}
-
-
-.handheld .badge{
+/* 뱃지/제목 */
+.hh-badge{
   background:#fff4e9;
   color:#8a430f;
   border:1px solid #f3dcc8;
@@ -262,19 +287,199 @@
   display:inline-block;
   margin-bottom:10px;
 }
-.handheld .body ul{
-  margin:10px 0 18px; padding:0; list-style:none;
+.hh-title{
+  font-weight:900;
+  color:#1D4E89;
+  margin:6px 0 16px;
+  font-size:clamp(18px,2.2vw,26px);
 }
-.handheld .body li{
-  position:relative; padding-left:22px; margin:8px 0;
-  font-size:15.5px; color:#3d4d5d;
+
+/* 기본(데스크탑) 리스트도 1열 고정 */
+@media (min-width: 992px){
+  .handheld-list .col-lg-6{
+    flex: 0 0 100% !important;
+    max-width: 100% !important;
+  }
+  .hh-card{ flex-direction:row; } /* 데스크탑에서 카드 내부만 좌/우 */
+  .hh-media{ flex:0 0 40%; padding:18px; }
+  .hh-body{ flex:1 1 auto; padding:26px 28px; }
+  .hh-media img{ max-height: 380px; }
 }
-.handheld .body li::before{
-  content:""; position:absolute; left:0; top:.65em;
+
+/* 태블릿/모바일: 이미지 자동 축소 */
+@media (max-width: 991.98px){
+  .hh-media img{ max-height: 260px; }
+}
+
+/* 스펙 리스트 (PC 기본: 두 줄 허용) */
+.hh-body ul.spec-oneline{
+  margin:8px 0 12px;
+  padding:0;
+  list-style:none;
+}
+.hh-body ul.spec-oneline li{
+  position:relative;
+  padding-left:22px;
+  margin:6px 0;
+  font-size:15.5px;
+  color:#3d4d5d;
+}
+.hh-body ul.spec-oneline li::before{
+  content:"";
+  position:absolute; left:0; top:.65em;
   width:8px; height:8px; background:#E67E22; border-radius:50%;
   box-shadow:0 0 0 3px rgba(230,126,34,.15);
 }
-.handheld .body li strong{ color:#0f2233; font-weight:800; }
+
+
+
+/* 모바일/태블릿: 주황 불릿 '항상 한 줄(ellipsis)' */
+@media (max-width: 991.98px){
+  .hh-body ul.spec-oneline{
+    margin: 6px 0 12px !important;
+    padding: 0 !important;
+    list-style: none !important;
+  }
+  .hh-body ul.spec-oneline li{
+    /* 불릿 + 텍스트를 한 줄로 */
+    position: static !important;
+    padding-left: 0 !important;
+    display: flex !important;
+    align-items: center !important;
+    gap: 10px !important;
+
+    /* 🔑 한 줄 + 말줄임 */
+    white-space: nowrap !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+    min-width: 0 !important;   /* flex 안에서 ellipsis 동작 보장 */
+
+    margin: 4px 0 !important;
+    background: transparent !important;
+    border: 0 !important;
+    box-shadow: none !important;
+  }
+  .hh-body ul.spec-oneline li::before{
+    /* 인라인 불릿 */
+    content: "" !important;
+    position: static !important;
+    width: 8px !important;
+    height: 8px !important;
+    border-radius: 50% !important;
+    background: #E67E22 !important;
+    box-shadow: 0 0 0 3px rgba(230,126,34,.15) !important;
+    flex: 0 0 8px !important;   /* 불릿 고정 크기 */
+    margin: 0 !important;
+  }
+}
+
+ 
+
+/* === 모바일 리스트 가독성 확장(1줄 유지 + 2~4글자 더 보이게) === */
+@media (max-width: 991.98px){
+  /* 본문 좌우 여백 살짝 축소 */
+  .hh-body{
+    padding: 22px 18px;               /* 기존 24~26 → 18으로 축소 */
+  }
+
+  /* 불릿 항목 컴팩트 모드 */
+  .hh-body ul.spec-oneline li{
+    gap: 6px !important;              /* 불릿-텍스트 간격 10 → 6 */
+    font-size: 14.5px !important;     /* 15.5 → 14.5 */
+    letter-spacing: -0.2px;           /* 자간 미세 축소 */
+  }
+
+  /* 불릿도 살짝 줄임 */
+  .hh-body ul.spec-oneline li::before{
+    flex: 0 0 6px !important;         /* 8px → 6px */
+    width: 6px !important;
+    height: 6px !important;
+    box-shadow: 0 0 0 2px rgba(230,126,34,.15) !important; /* 링도 얇게 */
+  }
+}
+
+/* 테이블에서 'Model' 행 강조 */
+.table-hw td[data-label="Model"] {
+  font-size: 14px !important;   /* 기존 12px → 14px 유지 */
+  background: #f4f7fb;   /* 은은한 회색 */
+  font-weight: 700;
+  color: #1D4E89;        /* 진한 파랑 (타이틀 색 계열) */
+  border-bottom: 2px solid #e0e6ee; /* 아래줄 조금 두껍게 */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* ===== Application (Left panel + Right single image) ===== */
+.apps.v2 { padding-top: 8px; }
+
+/* Left */
+.apps.v2 .left-panel{
+  background:#182736; color:#f0f4f8;
+  border-radius:18px; padding:28px 24px;
+  box-shadow:0 10px 28px rgba(0,0,0,.12);
+}
+.apps.v2 .left-panel h3{
+  color:#fff; font-weight:800; margin:0 0 18px; font-size:28px;
+  position:relative; padding-left:6px;
+}
+.apps.v2 .left-panel h3:before{
+  content:""; position:absolute; left:0; bottom:-12px; width:200px; height:4px;
+  background:#4fc3f7; border-radius:2px;
+}
+.apps.v2 .left-panel p{ margin:14px 0; line-height:1.9; font-size:15px; color: #fff; font-weight: 700; }
+.apps.v2 .left-panel em{ color:#ffd54f; font-weight:700; font-style:normal; }
+
+/* Right */
+.apps.v2 .right-img{
+  border-radius:18px;
+  box-shadow:0 12px 30px rgba(0,0,0,.08);
+  overflow:hidden;                 /* 이미지 넘침 잘라주기 */
+}
+
+/* === 데스크탑(≥992px): 좌/우 동일 높이 + 이미지 채우기 === */
+@media (min-width: 992px){
+  .apps.v2 .row{ align-items: stretch; }            /* 부트스트랩 row 스트레치 */
+  .apps.v2 .col-lg-4, .apps.v2 .col-lg-8{ display:flex; }
+.apps.v2 .left-panel, .apps.v2 .right-img{
+  display:flex; flex:1 1 auto;
+}
+.apps.v2 .left-panel{
+  flex-direction: column;
+}
+  .apps.v2 .right-img img{
+    display:block; width:100%; height:100%;
+    object-fit:cover;                                /* 비율 유지하며 꽉 채움(일부 크롭) */
+    border-radius:18px;
+  }
+}
+
+/* === 모바일/태블릿(<992px): 자연스러운 세로 스택 === */
+@media (max-width: 991.98px){
+  .apps.v2 .left-panel{ margin-bottom:18px; }       /* 아래 여백만 */
+  .apps.v2 .right-img img{ width:100%; height:auto; } /* 이미지 자연 높이 */
+}
+
+
+ 
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -282,85 +487,21 @@
 
 
  
-/* ===== Application (Left panel + Right single image) ===== */
-.apps.v2 { padding-top: 8px; }
-
-/* 공통 레이아웃 */
-.apps.v2 .left-panel{
-  background:#182736;
-  color:#f0f4f8;
-  border-radius:18px;
-  padding:28px 24px;
-  height:100%;
-  box-shadow:0 10px 28px rgba(0,0,0,.12);
-}
-.apps.v2 .left-panel h3{
-  color:#fff;
-  font-weight:800;
-  margin:0 0 18px;
-  font-size:28px;
-  position:relative;
-  padding-left:6px;
-}
-.apps.v2 .left-panel h3:before{
-  content:"";
-  position:absolute;
-  left:0; bottom:-12px;
-  width:200px;              /* 길어진 언더라인 */
-  height:4px;
-  background:#4fc3f7;
-  border-radius:2px;
-}
-.apps.v2 .left-panel p{
-  margin:14px 0;
-  line-height:1.9;
-  font-size:15px;
-  color:#f0f4f8;
-}
-.apps.v2 .left-panel em{
-  color:#ffd54f;            /* 강조: 노랑 */
-  font-weight:700;
-  font-style:normal;
-}
-
-/* 오른쪽 이미지 영역 */
-.apps.v2 .right-img{
-  display:flex;             /* equal-height를 위해 flex 컨테이너 */
-}
-.apps.v2 .right-img img{
-  width:100%;
-  height:100%;              /* 부모 높이에 맞춤 → 왼쪽 패널과 동일 높이 */
-  object-fit:cover;         /* 비율 유지하며 꽉 채우기 */
-  border-radius:18px;
-  box-shadow:0 12px 30px rgba(0,0,0,.08);
-}
-
-/* 데스크탑에서 좌/우 동일 높이 */
-@media (min-width: 992px){
-  .apps.v2 .col-lg-4,
-  .apps.v2 .col-lg-8{
-    display:flex;           /* 컬럼 자체도 flex → 내부 박스가 늘어남 */
+  /* D2N 로고 스타일 */
+  .header.banner .brand {
+    color: #fff;
+    font-weight: 800;
+    letter-spacing: 1px;
+    text-decoration: none;
+    transition: color 0.15s;
+    margin-bottom: 14px !important; /* 로고 아래 간격 최소화 */
+    line-height: 1.1 !important;
   }
-  .apps.v2 .left-panel,
-  .apps.v2 .right-img{
-    flex:1 1 auto;          /* 두 박스가 같은 높이로 스트레치 */
+
+  .header.banner .brand:hover {
+    color: #E67E22;
+    text-decoration: none;
   }
-}
-
-/* 작은 화면에서 겹침 방지 & 자연스러운 스택 */
-@media (max-width: 991.98px){
-  .apps.v2 .right-img img{
-    height:auto;            /* 모바일에서는 원본 비율 */
-    object-fit:contain;
-  }
-  .apps.v2 .left-panel{
-    height:auto;
-    margin-bottom:18px;
-  }
-}
-
-
-
 
 
 
@@ -387,43 +528,19 @@
     }
 
 
-
-
-  /* D2N 로고 스타일 */
-  .header.banner .brand {
-    color: #fff;
-    font-weight: 800;
-    letter-spacing: 1px;
-    text-decoration: none;
-    transition: color 0.15s;
-    margin-bottom: 14px !important; /* 로고 아래 간격 최소화 */
-    line-height: 1.1 !important;
+/* 모바일에서 래퍼 테두리/그림자 제거 */
+@media (max-width: 576px){
+  .table-wrap{
+    border: 0 !important;
+    box-shadow: none !important;
+    background: transparent !important;
+    padding: 0 !important;
   }
-
-  .header.banner .brand:hover {
-    color: #E67E22;
-    text-decoration: none;
-  }
-
-
-
-
-
-
-/* === Footer: 거의 블랙 톤 === */
-#footer{
-  background: #020304 !important;      /* 거의 블랙 */
-  color: rgba(234,242,244,.72) !important;
-  border-top: 1px solid rgba(255,255,255,.06);
-  padding: 24px 0;
-  text-align: center;
 }
-#footer a{ color:#FFB74D; }
-#footer p{ margin:6px 0; }
 
 
-
-
+ 
+ 
 
   </style>
 </head>
@@ -546,41 +663,88 @@
 
   </section>
 
-  <!-- ===== 3) Handheld LiDAR GS-100G ===== -->
-  <section class="handheld wrap">
-    <div class="row align-items-stretch">
-      <div class="col-lg-5">
-        <div class="card h-100">
-          <div class="pic"><img src="img/equipment/gs100g.jpg" alt="GS-100G Handheld LiDAR"></div>
-        </div>
-      </div>
-      <div class="col-lg-7">
-        <div class="card h-100">
-          <div class="body">
-            <span class="badge">Handheld LiDAR</span>
-            <h3>GS-100G — 최고의 휴대용 LiDAR 솔루션</h3> 
+ 
+<!-- ===== 3) 장비소개 LiDAR (카드 그리드) ===== -->
+ 
+<section class="handheld wrap">
+  <div class="row g-4 handheld-list">
 
-		
-            <h4 class="mt-2" style="font-weight:800">주요 특징</h4>
-            <ul>
-              <li>가벼운 컴팩트 디자인 — 실외/실내 모두 사용</li>
-              <li>GNSS 및 SLAM 지원, 내부 배터리/외부 전원 운용</li>
-            </ul>
-            <h4 class="mt-3" style="font-weight:800">주요 제원</h4>
-            <ul>
-              <li>레이저: Hesai XT-16 (스핀형), Returns 2</li>
-              <li>포인트 비율: 320,000 pts/s (듀얼 에코 지원)</li>
-              <li>감지 범위: 80m @10%, 최대 120m</li>
-              <li>FOV: H 360° / V 270°</li>
-              <li>POS: Geosun AGS302 (GNSS + IMU)</li>
-              <li>크기/무게: 17.2×10.6×38.9cm / 1.8kg</li>
-              <li>소프트웨어: gPointsCreator</li>
-            </ul>
-          </div>
+    <!-- 카드 1 -->
+    <div class="col-lg-6">
+      <article class="hh-card">
+        <div class="hh-media">
+          <img src="img/equipment/gs100g.jpg" alt="GS-100G Handheld LiDAR" loading="lazy">
         </div>
-      </div>
+        <div class="hh-body">
+          <span class="hh-badge">Handheld LiDAR</span>
+          <h3 class="hh-title">GS-100G — 최고의 휴대용 LiDAR 솔루션</h3>
+
+          <h4 class="mt-2" style="font-weight:800">주요 특징</h4>
+          <ul class="spec-oneline">
+            <li>가벼운 컴팩트 디자인 — 실외/실내 모두 사용</li>
+            <li>GNSS 및 SLAM 지원, 내부 배터리/외부 전원 운용</li>
+          </ul>
+
+          <h4 class="mt-3" style="font-weight:800">주요 제원</h4>
+          <ul class="spec-oneline">
+            <li>레이저: Hesai XT-16 (스핀형), Returns 2</li>
+            <li>포인트 비율: 320,000 pts/s (듀얼 에코 지원)</li>
+            <li>감지 범위: 80m @10%, 최대 120m</li>
+            <li>FOV: H 360° / V 270°</li>
+            <li>POS: Geosun AGS302 (GNSS + IMU)</li>
+            <li>크기/무게: 17.2×10.6×38.9cm / 1.8kg</li>
+            <li>소프트웨어: gPointsCreator</li>
+          </ul>
+        </div>
+      </article>
     </div>
-  </section>
+
+
+
+
+
+
+    <!-- 카드 2 (예시) -->
+    <div class="col-lg-6">
+      <article class="hh-card">
+        <div class="hh-media">
+          <img src="img/equipment/gs100g.jpg" alt="GS-120G Handheld LiDAR" loading="lazy">
+        </div>
+        <div class="hh-body">
+          <span class="hh-badge">Handheld LiDAR</span>
+          <h3 class="hh-title">GS-120G — 고밀도 핸드헬드 LiDAR</h3>
+
+          <h4 class="mt-2" style="font-weight:800">주요 특징</h4>
+          <ul class="spec-oneline">
+            <li>경량화 설계 & 백팩 운용 최적화</li>
+            <li>GNSS/IMU 융합으로 안정적 트래킹</li>
+          </ul>
+
+          <h4 class="mt-3" style="font-weight:800">주요 제원</h4>
+          <ul class="spec-oneline">
+            <li>포인트 비율: 1,280,000 pts/s</li>
+            <li>감지 범위: 최대 120m</li>
+            <li>FOV: H 360° / V 270°</li>
+            <li>무게: 1.8kg</li>
+            <li>용도: Handheld / Backpack</li>
+          </ul>
+        </div>
+      </article>
+    </div>
+
+    <!-- 동일 형식으로 계속 추가 -->
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
 
  
 <!-- ===== 4) Application ===== -->
@@ -591,20 +755,18 @@
       <div class="left-panel">
         <h3>Application</h3>
 
-        <p>
-          LiDAR 기술은 현재 다양한 산업 분야에서 혁신적으로 활용되고 있습니다.
-          뛰어난 정확도와 신속한 데이터 수집 및 처리 능력을 갖춘 이 기술은
-          <em>산림, 측량 및 지도 작성, 전력선 점검, 고고학 등 다양한 공학 분야에서 탁월한 성과</em>를
-          보여주고 있습니다.
-        </p>
+<p>
+  LiDAR 기술은 뛰어난 정확성과 신속한 데이터 처리를 바탕으로 다양한 산업 현장에서 혁신을 주도하고 있습니다. 
+  <em>산림 관리, 고고학, 지도 제작, 전력 설비 점검부터 정밀측량에 이르기까지</em> 
+  그 활용 범위는 이미 기술의 경계를 넘어서고 있습니다.
+</p>
 
-        <p>
-          이처럼 뛰어난 정확성과 신속한 성능을 바탕으로 LiDAR 기술은
-          현대 기술의 핵심 구성 요소로 자리 잡고 있습니다.
-          또한 D2N은 <em>안정성과 효율성</em>을 중심으로
-          여러 산업 분야에서 <em>혁신적인 변화를 촉진</em>하고
-          여러분 비즈니스에 <em>새로운 기회</em>를 제공할 것입니다.
-        </p>
+<p>
+  디투엔은 바로 이 LiDAR 기술의 잠재력에 주목합니다. 
+  우리는 <em>안정성과 효율성</em>을 핵심 가치로 삼아 고객 비즈니스의 문제를 해결하고 이전에 없던 
+  <em>새로운 기회</em>를 창출하는 <em>혁신적인 솔루션</em>을 제공할 것입니다.
+</p>
+
       </div>
     </div>
 
