--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8">
-  <title>Portfolio | D2N</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<title>포트폴리오 | GIS·LiDAR 프로젝트 사례 모음 — D2N</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Meta -->
+<meta name="keywords" content="디투엔, D2N, 포트폴리오, 프로젝트 사례, GIS, 공간정보, LiDAR, 라이다, 드론, 디지털트윈, 데이터 분석, 도시재생, AI 공간분석">
+<meta name="description" content="D2N 포트폴리오 — 시계열 데이터 분석, 재해취약성 분석, 포인트클라우드 해석 등 GIS·LiDAR 기반 공간정보 프로젝트 성과를 확인하세요.">
+<link rel="canonical" href="https://www.d2n.co.kr/portfolio.html">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
@@ -94,6 +99,7 @@
   z-index: 3;
 }
 
+
 /* 돋보기 아이콘 디자인 */
 .box7 .icon .fa {
   background: #E67E22;
@@ -105,9 +111,13 @@
   align-items: center;
   justify-content: center;
   box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+  text-shadow: 0 0 3px rgba(0,0,0,.55), 0 1px 6px rgba(0,0,0,.35);
   transition: background 0.2s, transform 0.2s;
   font-size: 18px;
 }
+
+
+
 
 .box7 .icon .fa:hover {
   background: #cf6d15;
@@ -180,6 +190,30 @@
     display: none !important;
   }
 
+
+
+
+
+/* 기본: 한 줄 */
+.tagline .line2 {
+  margin-left: 6px;
+}
+
+/* 모바일(576px 이하)에서는 줄바꿈 */
+@media (max-width:576px) {
+  .tagline .line1,
+  .tagline .line2 {
+    display:block;
+    margin: 0;
+  }
+}
+
+
+
+
+
+
+
   /* =========================
      설명 영역
   ========================== */
@@ -194,6 +228,9 @@
     margin-bottom: 0;
     line-height: 1.6;
   }
+
+
+
 </style>
 
 
@@ -224,7 +261,11 @@
         <div class="col-md-12">
           <h1><a class="brand" href="index.html">D2N</a></h1>
           <h1 class="page-title">Portfolio</h1>
-          <p class="tagline">D2N Articles & Works — 공간정보·LiDAR·GIS 프로젝트</p>
+         <p class="tagline">
+  <span class="line1">D2N Articles & Works</span>
+  <span class="line2">공간정보·LiDAR·GIS 프로젝트</span>
+</p>
+
         </div>
       </div>
     </div>
